@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
   <description>Groups management power to simple Plone users</description>
-  <version>0.3.0dev</version>
+  <version>0.3.0</version>
 </metadata>
